Overview no longer overlaps with chart

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4000,6 +4000,12 @@ a.control-button-save.saving {
   border-top: 1px solid #d0d0d0;
 }
 
+.lower-panel-border {
+  height: 30px;
+  width: 100%;
+  border-bottom: 3px double #d0d0d0;
+}
+
 .main.embed .lower-panel {
   height: 70px;
 }
@@ -4121,7 +4127,7 @@ a.control-button-save.saving {
 /*.........................................................................*/
 
 .overview {
-  height: 140px;
+  height: 107px;
   position: relative;
   cursor: default;
   background: #f1f1f1;
@@ -4141,12 +4147,12 @@ a.control-button-save.saving {
 .overview div:not(.overview-selection) {
   position: absolute;
   width: 100%;
-  height: 140px;
+  height: 107px;
   opacity: 0.6;
 }
 
 .main.embed .overview div:not(.overview-selection) {
-  height: 70px;
+  height: 37px;
 }
 
 .overview .overview-selection {
@@ -4156,7 +4162,7 @@ a.control-button-save.saving {
   pointer-events: none;
   background-color: #3f3f3f;
   width: auto;
-  height: 140px;
+  height: 107px;
   opacity: 0.1;
 }
 
@@ -4166,7 +4172,7 @@ a.control-button-save.saving {
 }
 
 .main.embed .overview .overview-selection {
-  height: 70px;
+  height: 37px;
 }
 
 .lower-panel .overview .overview-date {
